<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Material Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <!-- Total Amount TextView -->
    <TextView
        android:id="@+id/totalAmountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/total_amount"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Customer Information Section -->

    <!-- Title: Customer Information -->
    <TextView
        android:id="@+id/customerInfoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/totalAmountTextView"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/customer_info_title"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:layout_below="@id/customerInfoTitle"
        android:layout_marginTop="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userPhoneTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint"
        android:layout_below="@id/userNameTextView"
        android:layout_marginTop="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Location Option -->
    <RadioGroup
        android:id="@+id/radioGroupLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userPhoneTextView"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioUseLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_location_radiobutton" />

        <RadioButton
            android:id="@+id/radioEnterAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_location_radiobutton"
            android:checked="true" />
    </RadioGroup>

    <!-- Address Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userAddressTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_hint"
        android:layout_below="@id/radioGroupLocation"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:layout_below="@id/userAddressTextView"
        android:layout_marginTop="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Title: Payment Method -->
    <TextView
        android:id="@+id/paymentMethodTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtLayEmail"
        android:layout_marginTop="25dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/payment_method_title"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Payment Method Radio Buttons -->
    <RadioGroup
        android:id="@+id/paymentMethodGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/paymentMethodTitle"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <RadioButton
            android:id="@+id/radioCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_card_radiobutton"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioDebit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debit_card_radiobutton" />

    </RadioGroup>

    <!-- Card Number Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number_hint"
        android:layout_below="@id/paymentMethodGroup"
        android:layout_marginTop="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Expiry Date Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayExpiryDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/expiry_date_hint"
        android:layout_below="@id/txtLayCardNumber"
        android:layout_marginTop="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtExpiryDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- CVV Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayCVC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cvv_hint"
        android:layout_below="@id/txtLayExpiryDate"
        android:layout_marginTop="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtCVC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Payment Button -->
    <Button
        android:id="@+id/paymentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtLayCVC"
        android:layout_marginTop="20dp"
        android:text="@string/pay_button"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

</RelativeLayout>

</ScrollView>
