<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Material ToolBar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <!-- Orders message -->
    <TextView
        android:id="@+id/noOrdersItemsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_orders_message"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <!-- RecyclerView to display order items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewOrderItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_above="@+id/goToHomeButton"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        android:visibility="visible" />

    <Button
        android:id="@+id/reviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_review_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp" />

    <!-- Button to go to home activity -->
    <Button
        android:id="@+id/goToHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_home_button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp" />

</RelativeLayout>
