<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    tools:context=".MainActivity">

    <!-- Title Text -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/chatbot_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/idTILQuery"
        android:layout_below="@id/titleTextView"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/conversationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>

    <!-- Text field for asking question -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILQuery"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="0dp"
        android:hint="@string/query_input"
        android:padding="3dp"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idEdtQuery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/edt_back_color"
            android:ems="10"
            android:imeOptions="actionSend"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Send button -->
    <ImageView
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/idTILQuery"
        android:layout_alignBottom="@id/idTILQuery"
        android:layout_alignParentEnd="true"
        android:padding="8dp"
        android:src="@drawable/ic_send"
        app:tint="@color/white"
        android:contentDescription="@string/send_button" />

</RelativeLayout>
